# src/users/users.route.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 const userController = require('./users.controller');
 const authMiddleware = require('../auth/auth.middleware');
 
-router.post('/create', authMiddleware, userController.createUserController);
+router.post('/create', userController.createUserController);
 router.get('/', authMiddleware, userController.findAllUserController);
 
 module.exports = router;
